# lifesim

./: README.md  cython_accel.pyx  enhanced.py  enhanced.spec  lifesim.spec  lifesim2.exe.spec  main.py  main.py.old  pyproject.toml  setup.py  vulkan_launcher.py
