[project]
name = "lifesim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pycolornames>=1.1.0",
    "pygame>=2.6.1",
    "pyinstaller>=6.19.0",
    "pyopengl>=3.1.10",
    "vulkan>=1.3.275.1",
]
